Backend/AuthorizeUserTactic1.jj
PARSER_BEGIN(AuthorizeUserTactic1)

import java.util.*;

public class AuthorizeUserTactic1 {
    private static ArrayList<String[]> events = new ArrayList<String[]>(); 
    private static int tacticCount = 0;

    public static void main(String[] args) {
        try {
            Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
            }
            scanner.close();

            String traceInput = inputBuilder.toString();

            System.out.println("\n=====================================================================================");
            System.out.println("                      TACTIC DETECTION SYSTEM INITIALIZED ");
            System.out.println("=====================================================================================\n");
            
            AuthorizeUserTactic1 parser = new AuthorizeUserTactic1(new java.io.StringReader(traceInput));
            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println("\n TraceClient: Client--METHOD-->TraceReferenceMonitor: ReferenceMonitor ");
            System.out.println(" TraceReferenceMonitor: ReferenceMonitor--METHOD-->TraceReferenceMonitor: ReferenceMonitor");
            System.out.println(" IF rv=true : ");
            System.out.println(" TraceClient: Client--METHOD-->TraceResource: Resource ");
            parser.Trace();
            detectTactic();
            
            System.out.println("\n=====================================================================================");
            System.out.println("                      ANALYSIS SUMMARY");
            System.out.println("Total Authorized User Tactic occurrences detected: " + tacticCount);
            System.out.println("=====================================================================================\n");
            
            
        } catch (Exception e) {
            System.out.println("{\"error\": \"Parsing failed: " + e.getMessage() + "\"}");
        }
    }

    private static void detectTactic() {
        for (int i = 0; i < events.size() - 2; ) {
            String[] first = events.get(i);
            String[] second = events.get(i + 1);
            String[] third = events.get(i + 2);
            
            //  mth1 <same-caller> mth3 , // mth1 < call, same_caller_callee > mth2  , // mth1 < not_same_callee> mth3
            if (first[0].equals(third[0]) && !first[0].equals(first[2]) && 
                first[2].equals(second[0]) && second[0].equals(second[2]) &&  
                third[0].equals(first[0]) && !third[2].equals(first[2]) &&  
                !third[0].equals(third[2])) {
                
                tacticCount++;
                
                System.out.println("\n=====================================================================================");
                System.out.println("                  Tactic detected at line " + i);
                System.out.println("-------------------------------------------------------------------------------------");
                System.out.println(i + " | " + first[0] + ":Client -- " + first[1] + " --> " + first[2] + ":ReferenceMonitor");
                System.out.println((i+1) + " | " + second[0] + ":ReferenceMonitor -- " + second[1] + " --> " + second[2] + ":ReferenceMonitor");
                System.out.println((i+2) + " | " + third[0] + ":Client -- " + third[1] + " --> " + third[2] + ":Resource");
                System.out.println("=====================================================================================");
                
                i += 3; 
            } else {
                System.out.println("\nX ERROR! Unexpected CALLER Or CALLEE at event line " + i);
                System.out.println("-------------------------------------------------------------------------------------");
                i++;
            }
        }
    }

    
    }


PARSER_END(AuthorizeUserTactic1)

// Ignorer les espaces, tabulations et retours à la ligne
SKIP : { " " | "\t" | "\r" | "\n" }

// Définition des tokens
TOKEN : { <CALLER : "CALLER:"> }
TOKEN : { <METHOD : "METHOD:"> }
TOKEN : { <CALLEE : "CALLEE:"> }
TOKEN : { <COMMA : ","> }
TOKEN : { <SEMICOLON : ";"> }
TOKEN : { <IDENTIFIER : (["a"-"z", "A"-"Z", "0"-"9", "_"])+ > }

// Définition de la grammaire
void Trace() :
{
    System.out.println("\n Analyzing trace...");
}
{
    ( Event() )*
}

void Event() :
{ Token caller; Token method; Token callee; }
{
    <CALLER> caller = <IDENTIFIER> <COMMA>
    <METHOD> method = <IDENTIFIER> <COMMA>
    <CALLEE> callee = <IDENTIFIER> <SEMICOLON>
    {
        events.add(new String[]{caller.image, method.image, callee.image}); 
}
}
