Backend/AuthorizeUserTactic1.java
/* Generated By:JavaCC: Do not edit this line. AuthorizeUserTactic1.java */
import java.util.*;

public class AuthorizeUserTactic1 implements AuthorizeUserTactic1Constants {
    private static ArrayList<String[]> events = new ArrayList<String[]>();
    private static int tacticCount = 0;

    public static void main(String[] args) {
        try {
            Scanner scanner = new Scanner(System.in);
            StringBuilder inputBuilder = new StringBuilder();

            while (scanner.hasNextLine()) {
                String line = scanner.nextLine();
                inputBuilder.append(line).append("\n");
            }
            scanner.close();

            String traceInput = inputBuilder.toString();

            System.out.println("\n=====================================================================================");
            System.out.println("                      TACTIC DETECTION SYSTEM INITIALIZED ");
            System.out.println("=====================================================================================\n");

            AuthorizeUserTactic1 parser = new AuthorizeUserTactic1(new java.io.StringReader(traceInput));
            System.out.println("                      <----  Tactic structure ----> : ");
            System.out.println("\n TraceClient: Client--METHOD-->TraceReferenceMonitor: ReferenceMonitor ");
            System.out.println(" TraceReferenceMonitor: ReferenceMonitor--METHOD-->TraceReferenceMonitor: ReferenceMonitor");
            System.out.println(" IF rv=true : ");
            System.out.println(" TraceClient: Client--METHOD-->TraceResource: Resource ");
            parser.Trace();
            detectTactic();

            System.out.println("\n=====================================================================================");
            System.out.println("                      ANALYSIS SUMMARY");
            System.out.println("Total Authorized User Tactic occurrences detected: " + tacticCount);
            System.out.println("=====================================================================================\n");


        } catch (Exception e) {
            System.out.println("{\"error\": \"Parsing failed: " + e.getMessage() + "\"}");
        }
    }

    private static void detectTactic() {
        for (int i = 0; i < events.size() - 2; ) {
            String[] first = events.get(i);
            String[] second = events.get(i + 1);
            String[] third = events.get(i + 2);

            //  mth1 <same-caller> mth3 , // mth1 < call, same_caller_callee > mth2  , // mth1 < not_same_callee> mth3
            if (first[0].equals(third[0]) && !first[0].equals(first[2]) &&
                first[2].equals(second[0]) && second[0].equals(second[2]) &&
                third[0].equals(first[0]) && !third[2].equals(first[2]) &&
                !third[0].equals(third[2])) {

                tacticCount++;

                System.out.println("\n=====================================================================================");
                System.out.println("                  Tactic detected at line " + i);
                System.out.println("-------------------------------------------------------------------------------------");
                System.out.println(i + " | " + first[0] + ":Client -- " + first[1] + " --> " + first[2] + ":ReferenceMonitor");
                System.out.println((i+1) + " | " + second[0] + ":ReferenceMonitor -- " + second[1] + " --> " + second[2] + ":ReferenceMonitor");
                System.out.println((i+2) + " | " + third[0] + ":Client -- " + third[1] + " --> " + third[2] + ":Resource");
                System.out.println("=====================================================================================");

                i += 3;
            } else {
                System.out.println("\nX ERROR! Unexpected CALLER Or CALLEE at event line " + i);
                System.out.println("-------------------------------------------------------------------------------------");
                i++;
            }
        }
    }

// Définition de la grammaire
  static final public void Trace() throws ParseException {
    System.out.println("\n Analyzing trace...");
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Event();
    }
  }

  static final public void Event() throws ParseException {
  Token caller; Token method; Token callee;
    jj_consume_token(CALLER);
    caller = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    jj_consume_token(METHOD);
    method = jj_consume_token(IDENTIFIER);
    jj_consume_token(COMMA);
    jj_consume_token(CALLEE);
    callee = jj_consume_token(IDENTIFIER);
    jj_consume_token(SEMICOLON);
        events.add(new String[]{caller.image, method.image, callee.image});
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public AuthorizeUserTactic1TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[1];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x20,};
   }

  /** Constructor with InputStream. */
  public AuthorizeUserTactic1(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public AuthorizeUserTactic1(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new AuthorizeUserTactic1TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public AuthorizeUserTactic1(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AuthorizeUserTactic1TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public AuthorizeUserTactic1(AuthorizeUserTactic1TokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(AuthorizeUserTactic1TokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 1; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[11];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 1; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 11; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

    }
